@@ -33,7 +33,7 @@ typedef enum
   G_MARKUP_ERROR_BAD_UTF8,
   G_MARKUP_ERROR_EMPTY,
   G_MARKUP_ERROR_PARSE,
-  /* These three are primarily intended for specific GMarkupParser
+  /* The following are primarily intended for specific GMarkupParser
    * implementations to set.
    */
   G_MARKUP_ERROR_UNKNOWN_ELEMENT,
